Made service methods return unmodifiable lists